<resources>
    <string name="app_name">AndroidStore</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_now">立即注册</string>
    <string name="identify">验证码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="send_identify">发送验证码</string>
    <string name="accept_register">同意协议并注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bottom_home">主页</string>
    <string name="nav_bottom_classify">分类</string>
    <string name="nav_bottom_cart">购物车</string>
    <string name="nav_bottom_me">我的</string>
    <string name="todo">TODO</string>
    <string name="login_and_register">登录/注册</string>
    <string name="mine_order_unconfirmed">等待确认订单</string>
    <string name="mine_order_wait_pay">待付款</string>
    <string name="mine_order_wait_ship">待发货</string>
    <string name="mine_order_shipped">已发货</string>
    <string name="mine_order_history">历史</string>
    <string name="mine_help">帮助</string>
    <string name="address_title_manage">管理收货地址</string>
    <string name="forget_password">忘记密码</string>
    <string name="save_address">保存</string>
    <string name="exit">退出登录</string>
</resources>
